add search function

--- a/webapp/css/index.css
+++ b/webapp/css/index.css
@@ -18,3 +18,11 @@
 #pagefoot nav {
     margin-left: 505px;
 }
+
+#PreviousBtn:hover {
+    cursor: pointer;
+}
+
+#NextBtn:hover {
+    cursor: pointer;
+}
