--- a/webapp/css/index.css
+++ b/webapp/css/index.css
@@ -172,3 +172,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+#page-foot {
+    margin-bottom: 25px;
+}
